src/components/teamList/teamListEntry/style.css
.teamListEntry {
  width: 100%;
  height: 400px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  position: relative;
}

.teamListEntryImageContainer {
  width: 200px;
  height: 200px;
  min-height: 200px;
  border-radius: 50%;
  overflow: hidden;
  display: flex;
  justify-content: center;
}

.teamListEntry img {
  pointer-events: none;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.teamListEntry h3 {
  font-size: 24px;
  margin-bottom: 0;
  transition: color 0.2s linear;
}

.teamListEntry p {
  margin-top: 10px;
  transition: color 0.2s linear;
}

.teamTextActive {
  color: var(--beige);
}

.teamTextInactive {
  color: var(--dark-blue);
}

.teamListEntryBubbleContainer {
  position: absolute;
  z-index: -10;
  top: -80px;
  height: 430px;
}

.teamListEntryBubble {
  height: 100%;
}

.teamListLink {
  text-decoration: none;
}

